--- a/index.html
+++ b/index.html
@@ -110,6 +110,33 @@ footer {
             Your browser does not support the video tag.
         </video>
     </div>
+    <h2>February 17, 2026 - News Update</h2>
+<p>
+New developments have been reported today regarding the West Philippine Sea.
+1. New Natural Gas Discovery at Malampaya East-1
+
+The Philippines announced a major natural gas reservoir found near the existing Malampaya field off Palawan, estimated to hold ~98 billion cubic feet of gas — the first significant find in over a decade.
+
+This reservoir is called Malampaya East-1 (MAE-1) and can potentially produce enough power for millions of homes and schools.
+
+The discovery also includes valuable condensate, a liquid fuel product.
+
+It’s part of a new Phase 4 drilling campaign (including Camago and Bagong Pag-asa wells) aiming to extend the life of domestic natural gas supplies.
+
+🛡️ 2. Security and Patrols Near Malampaya
+
+Philippine forces increased maritime and aerial patrols around the existing Malampaya field and the newly found MAE-1 site to protect this critical energy asset amid ongoing regional tensions.
+
+The military is stepping up monitoring to safeguard infrastructure viewed as vital to national energy security.
+
+The AFP and Coast Guard have also expressed capability and commitment to defend the broader gas field.
+
+🚢 3. West Philippine Sea Tensions
+
+In the past week, the AFP reported monitoring dozens of Chinese vessels operating in the West Philippine Sea, highlighting persistent maritime pressure and activity by China in the disputed waters.
+
+This continues a broader pattern of frequent Chinese patrols and maritime presence as the Philippines asserts its exclusive economic zone (EEZ) rights under international law.
+</p>
 </section>
 
 <div class="container">
@@ -190,4 +217,5 @@ The West Philippine Sea forms part of the Philippines’ 200-nautical-mile EEZ a
 </footer>
 
 </body>
+
 </html>
